--- a/node-test/weAPP/editpassword.html
+++ b/node-test/weAPP/editpassword.html
@@ -14,129 +14,164 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <style>
-      .header{ background: #8e87eb; }
-      .header .row_top{ height: 44px; line-height: 44px; color: #fff; font-size: 16px; }
+      .bgPic{
+        position: absolute;
+        background: #1a202e;
+        width: 100%;
+        height: 100%;
+        background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
+        -o-background-size: 100% 100%;
+      }
+      .header{ background: #121622;}
+      .header .row_top{ height: 48px; line-height: 48px; color: #fff; font-size: 16px; }
+      .header .row_top .ico1{ width: 30px; height: 28px; }
       .header .row_top .tip{ text-align: center; font-weight: 700; }
       .header .row_top .links{ color: #fff; text-decoration: none; }
-      .row2{position: relative; top: 0px;}
-      .addon1{padding: 0px 10px 0px 10px;}
-      .addon1 .btn1{ padding: 5px 12px; color: #8e87eb; background: transparent; border-color:#8e87eb;}
-      .row2 .form-inline .form-group{
-        margin-bottom: 0;
-        height: 55px;
-        line-height: 55px;
-        padding: 10px 0;
+      .row2{
+        position: relative;
+        margin-top: 0px;
       }
-      .row2 .form-inline{ border-bottom: 1px solid #e0e0e0;  margin: 10px auto; }
-      .row2 .form-inline .form-group .input-group{ vertical-align: top; }
-      .row2 .form-inline .form-group .input-group-addon,
-      .row2 .form-inline .form-group .input-group .form-control{
+      .row2 .container{padding-right: 25px; padding-left: 25px;}
+      .row2 .form-group{
+        margin:5px 0;
+        padding: 0 10px;
+        border-bottom: 1px solid #323848;
+      }
+      .addon1{padding: 6px 0;}
+      .addon2{padding: 6px 0;}
+      .addon3{padding: 0px;}
+      .addon3 .btn1{
+        padding: 5px 0px;
+        color: #3dd4ff;
+        background: transparent;
+        border-style:none;
+      }
+      .row2 .form-group .input-group .cont1{ padding: 6px 20px; }
+      .row2 .form-group .input-group,
+      .row2 .form-group .input-group .form-control{
+        vertical-align: top;
+        height: 55px;
+        color: #fff;
+      }
+      .row2 .form-group .input-group-addon,
+      .row2 .form-group .input-group .form-control{
         border-style: none;
         background: transparent;
         outline: none;
         box-shadow: none;
       }
-      /* .row2 .form-control::-webkit-input-placeholder,
-      .row2 .form-control:-moz-placeholder,
-      .row2 .form-control::-moz-placeholder,
-      .row2 .form-control:-ms-input-placeholder{
-        color: #808080;
-      } */
-      .row2 .form-inline .form-group .input-group-addon .glyphicon{ font-size: 20px; color:#8e87eb;  }
+      .row2 .form-group .input-group-addon .icon1{width: 20px; height: 25px;}
+      .row2 .form-group .input-group-addon .shanchu{width: 20px; height: 20px;}
       .loginBtn{margin: 40px 15px 0; text-align: center;}
-      .loginBtn .btn{ width: 100%; background:#8e87eb;  text-align: center; height: 60px; line-height: 60px; padding: 0; color: #fff; font-size: 18px;}
+      .loginBtn .btn{
+        width: 100%;
+        background:#0178ff;
+        text-align: center;
+        height: 60px;
+        line-height: 60px;
+        padding: 0;
+        color: #fff;
+        font-size: 18px;
+        outline: none;
+        border-style: none;
+      }
       .passLink{ margin-top: 20px; }
       .passLink .item{text-align: center;}
       .passLink .item .a1{color:#8e87eb; text-decoration: underline;}
       .checkbox label{height: 30px; line-height: 30px;}
       .img1 {
-        width: 26px;
-        height: 18px;
+        width: 20px;
+        height: 12px;
         position: relative;
         right: 0px;
         top: 0px;
       }
+      @media screen and (min-width: 320px) and (max-width: 359px){
+        .row2 .form-group{margin:0px;}
+        .row2 .txt { margin-top: 10px;}
+      }
     </style>
   </head>
   <body>
-    <div class="header">
-      <div class="container">
-        <div class="row row_top">
-          <div class="col-xs-4 col-sm-4 col-md-4">
-            <a href="security.html" class="links">
-              <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
+    <div class="bgPic">
+      <div class="header">
+        <div class="container">
+          <div class="row row_top">
+            <div class="col-xs-4 col-sm-4 col-md-4">
+              <a href="security.html" class="links">
+                <img src="images/fanhui.png" class="ico1">
+              </a>
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-4 tip">
+            修改密码
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-4">&nbsp;</div>
           </div>
-          <div class="col-xs-4 col-sm-4 col-md-4 tip">
-           修改密码
-          </div>
-          <div class="col-xs-4 col-sm-4 col-md-4">&nbsp;</div>
         </div>
       </div>
+      <div class="row2">
+        <div class="wrap">
+          <div class="form-group">
+            <label class="sr-only" for="exampleInput">Amount</label>
+            <div class="input-group">
+              <div class="input-group-addon addon1">
+                <img src="images/shouji1.png" class="icon1">
+              </div>
+              <input type="text" class="form-control cont1" id="exampleInput" placeholder="请输入手机号">
+              <div class="input-group-addon addon2">
+                <img class="shanchu" src="images/shanchu.png" onclick="inputClear()">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="wrap">
+          <div class="form-group">
+            <label class="sr-only" for="exampleInput1">Amount</label>
+            <div class="input-group">
+              <div class="input-group-addon addon1">
+                <img src="images/yanzhengma1.png" class="icon1">
+              </div>
+              <input type="text" class="form-control cont1" id="exampleInput1" placeholder="请输入验证码">
+              <div class="input-group-addon addon3">
+                <button type="submit" class="btn btn1">点击获取</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="wrap">
+          <div class="form-group">
+            <label class="sr-only" for="example3">Amount</label>
+            <div class="input-group">
+              <div class="input-group-addon addon1">
+                <img src="images/mima1.png" class="icon1">
+              </div>
+              <input type="password" class="form-control cont1" id="example3" placeholder="请输入密码">
+              <div class="input-group-addon addon2">
+                <img id="picShow" class="img1" onclick="ShowPass()" src="images/yan1.png">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="wrap">
+          <div class="form-group">
+            <label class="sr-only" for="example4">Amount</label>
+            <div class="input-group">
+              <div class="input-group-addon addon1">
+                <img src="images/mima1.png" class="icon1">
+              </div>
+              <input type="password" class="form-control cont1" id="example4" placeholder="请再次输入密码">
+              <div class="input-group-addon addon2">
+                <img id="imgShow" class="img1" onclick="ShowPass1()" src="images/yan1.png">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+        <div class="loginBtn"><button type="button" class="btn btn-default">保存</button></div>
+        </div>
     </div>
-    <div class="row2">
-       <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="exampleInput">Amount</label>
-          <div class="input-group">
-            <!-- <div class="input-group-addon">
-              <i class="glyphicon glyphicon-phone"></i>
-            </div> -->
-            <input type="text" class="form-control" id="exampleInput" placeholder="输入手机号">
-            <!-- <div class="input-group-addon">
-              <i class="glyphicon glyphicon-remove-circle" onclick="inputClear()"></i>
-            </div> -->
-          </div>
-        </div>
-      </form>
-      <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="exampleInput1">Amount</label>
-          <div class="input-group">
-            <!-- <div class="input-group-addon">
-              <i class="glyphicon glyphicon-qrcode"></i>
-            </div> -->
-            <input type="text" class="form-control" id="exampleInput1" placeholder="请输入验证码(6位数字)">
-            <div class="input-group-addon addon1">
-             <button type="submit" class="btn btn1">点击获取</button>
-            </div>
-          </div>
-        </div>
-      </form>
-      <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="demo_input">Amount</label>
-          <div class="input-group">
-            <!-- <div class="input-group-addon">
-              <i class="glyphicon glyphicon-lock"></i>
-            </div> -->
-            <input type="password" class="form-control" id="demo_input" placeholder="请输入密码(6-16位数字/字母/下划线)">
-            <div class="input-group-addon">
-              <!-- <i class="glyphicon glyphicon-remove-circle" onclick="inputClear()"></i> -->
-              <img id="demo_img" class="img1" onclick="hideShowPsw()" src="look1.png">
-            </div>
-          </div>
-        </div>
-      </form>
-      <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="input4">Amount</label>
-          <div class="input-group">
-            <!-- <div class="input-group-addon">
-              <i class="glyphicon glyphicon-lock"></i>
-            </div> -->
-            <input type="password" class="form-control" id="input4" placeholder="请输入确认密码">
-            <div class="input-group-addon">
-              <!-- <i class="glyphicon glyphicon-remove-circle" onclick="inputClear()"></i> -->
-              <img id="demo_pic" class="img1" onclick="hideShowPsw1()" src="look1.png">
-            </div>
-          </div>
-        </div>
-      </form>
-      <div class="container">
-       <div class="loginBtn"><button type="button" class="btn btn-default">确认</button></div>
-      </div>
-  </div>
+    </div>
 <script>
   function inputClear() {
     $("#exampleInput").val("");
@@ -147,30 +182,58 @@
 </script>
 <script type="text/javascript">
   // 这里使用最原始的js语法实现，可对应换成jquery语法进行逻辑控制
-  var demoImg = document.getElementById("demo_img");
-  var demoInput = document.getElementById("demo_input");
+  // var demoImg = document.getElementById("demo_img");
+  // var demoInput = document.getElementById("demo_input");
 
-  var demoPic = document.getElementById("demo_pic");
-  var Input4 = document.getElementById("input4");
-    //隐藏text block，显示password block
-  function hideShowPsw(){
-    if (demoInput.type == "password") {
-      demoInput.type = "text";
-      demo_img.src = "look2.png";
-    }else {
-      demoInput.type = "password";
-      demo_img.src = "look1.png";
-    }
+  // var demoPic = document.getElementById("demo_pic");
+  // var Input4 = document.getElementById("input4");
+  //   //隐藏text block，显示password block
+  // function hideShowPsw(){
+  //   if (demoInput.type == "password") {
+  //     demoInput.type = "text";
+  //     demo_img.src = "look2.png";
+  //   }else {
+  //     demoInput.type = "password";
+  //     demo_img.src = "look1.png";
+  //   }
+  // }
+  // function hideShowPsw1(){
+  //   if (Input4.type == "password") {
+  //     Input4.type = "text";
+  //     demo_pic.src = "look2.png";
+  //   }else {
+  //     Input4.type = "password";
+  //     demo_pic.src = "look1.png";
+  //   }
+  // }
+
+
+function inputClear() {
+  $("#exampleInput").val("");
+  $("#exampleInput2").val("");
+}
+  var imgShow = document.getElementById("imgShow");
+  var Example4 = document.getElementById("example4");
+function ShowPass1(){
+  if (Example4.type == "password") {
+    Example4.type = "text";
+    imgShow.src = "images/yan2.png";
+  }else {
+    Example4.type = "password";
+    imgShow.src = "images/yan1.png";
   }
-  function hideShowPsw1(){
-    if (Input4.type == "password") {
-      Input4.type = "text";
-      demo_pic.src = "look2.png";
-    }else {
-      Input4.type = "password";
-      demo_pic.src = "look1.png";
-    }
+}
+  var picShow = document.getElementById("picShow");
+  var Example3 = document.getElementById("example3");
+function ShowPass(){
+  if (Example3.type == "password") {
+    Example3.type = "text";
+    picShow.src = "images/yan2.png";
+  }else {
+    Example3.type = "password";
+    picShow.src = "images/yan1.png";
   }
+}
 </script>
   </body>
 </html>
