--- a/node-test/weAPP/home.html
+++ b/node-test/weAPP/home.html
@@ -8,115 +8,190 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>首页home</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.min.css">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.1/css/jquery-weui.min.css">
+    <link rel="stylesheet" href="css/weui.min.css">
+    <link rel="stylesheet" href="css/jquery-weui.min.css">
     <link rel="stylesheet" type="text/css" href="css/zhifu.css">
+    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询 -->
     <!--[if lt IE 9]>
-      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+      <script src="js/html5shiv.min.js"></script>
+      <script src="js/respond.min.js"></script>
     <![endif]-->
-
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边)-下放引入v3.4.1版本 -->
+    <!-- jQuery(Bootstrap 的所有JavaScript插件都依赖jQuery所以必须放在前边) -->
     <script src="js/jquery-1.12.4.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery-weui/1.2.1/js/jquery-weui.min.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
     <!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/base/event/eventdispatcher.js"></script>
+    <script src="js/base/bridge/bridge.js"></script>
+    <script src="js/base/security/forge.min.js"></script>
+    <script src="https://unpkg.com/better-scroll/dist/bscroll.min.js"></script>
+    
     <style>
-      body{background: #f8f8f8;}
-     .head{ background: url('./images/di2.png') no-repeat center 0;
+    .bgPic{
+      position: absolute;
+      background: url('./images/bj2.jpg') no-repeat center center;
       width: 100%;
-      height: 320px;
-      background-size: 100% 50%;
-      -webkit-background-size: 100% 50%;
-      -o-background-size: 100% 50%;
+      height: 100%;
+      background-size: 100% 100%;
+      -webkit-background-size: 100% 100%;
+      -o-background-size: 100% 100%;
     }
-    .head .up{ height: 78px; line-height: 78px; color: #fff; margin-bottom: 10px; }
-    .head .up .txt{ font-size: 20px; text-align: center; }
-    .head .up .imageDiv{
-      width: 60px;
-      height: 60px;
-      margin-top: 10px;
+    .header{ background: transparent;}
+    .header .row_top{ height: 48px; line-height: 48px; color: #fff; font-size: 16px; }
+    .header .row_top .tip{ text-align: center; font-weight: 700;}
+    .header .row_top .links{ color: #fff; text-decoration: none; }
+    .header .row_top .ico1{ width: 30px; height: 28px; }
+    .header .row_top .ico2{ width: 30px; height: 28px; }
+    .header .row_top .div3{ text-align: right; }
+    .wrapbox{}
+    .wrapbox .wrapbox_1{ color: #fff; height: 50px; line-height: 50px;}
+    .wrapbox .wrapbox_1 .info{
+      margin-left: 20px;
+      background: #269abc;
+      color: #fff;
+      text-decoration: none;
+      width: 54px;
+      height: 34px;
+      line-height: 34px;
+      display: inline-block;
+      vertical-align: middle;
+      text-align: center;
+      border-radius: 5px;
     }
-    .head .up .imageDiv .photo .ImgSrc{
-      height: 60px;
-      width: 60px;
-      border-radius: 50%;
+    .wrapbox .wrapbox_2{
+      color: #fff;
+      display: inline-block;
+      width: 100%;
+      height: 65px;
+      line-height: 65px;
+      border-bottom: 1px solid #fff;
     }
-    .head .down{ height: 206px; background: url('./images/qianbao1.png') no-repeat center; background-size: 100% 100%; }
-    .head .down .row_1{ height: 45px; line-height: 45px; }
-    .head .down .row_1 .coin1{ padding-left: 35px;font-size: 14px;}
-    .head .down .row_1 .coin1 img{ width: 28px; height: 26px; margin-right: 14px; }
-    .head .down .row_1 .coin2{ text-align: center; }
-    .head .down .row_1 .coin2 .btn{
-      color: #8e87eb;
-      border-color:#8e87eb;
-      background: #fff;
-      margin-top: -5px;
-      outline: none;
-    }
-    .down .tcb{ margin: 60px auto; text-align: center;  font-size: 30px; color: #fff;}
-
-    .foot .nav-tabs{ width: 205px; height: 45px; margin: 0 auto; border-bottom: none;  }
+    .wrapbox .wrapbox_2 .child1{ float: left; width: 80%; }
+    .wrapbox .wrapbox_2 .child1 span{ font-size: 24px; margin-right: 10px;}
+    .wrapbox .wrapbox_2 .child2{  float: right; width: 20%;text-align: right;}
+    .wrapbox .wrapbox_2 .child2 img{ height: 50px; width: 50px; border-radius: 50%; }
+    .foot{ margin-top: 25px; }
+    .foot .nav-tabs{width: 220px; height: 45px; margin: 0 auto; border-bottom: none;  }
     .foot .nav-tabs .lis{ width: 50%;}
-    .foot .nav-tabs .lis a{color: #8e87eb; border:1px solid #8e87eb; }
+    .foot .nav-tabs .lis a{color: #929fb9; border:1px solid #929fb9; }
     .foot .nav-tabs .li1 a{
       border-right-style: none;
       border-top-left-radius:15px;
       border-bottom-left-radius:15px;
+      background: url('./images/pic3.png') no-repeat 10px center;
     }
     .foot .nav-tabs .li2 a{
       border-top-right-radius:15px;
       border-bottom-right-radius:15px;
       border-left-style: none;
+      background: url('./images/pic1.png') no-repeat  10px center;
     }
-    .foot .nav-tabs>li>a{ border-style: none; border-radius: 0; margin-right: 0;}
-    .foot .nav-tabs>li.active>a,
+    .foot .nav-tabs li a{
+      text-align: center;
+      padding: 10px 10px 10px 35px;
+      border-style: none;
+      border-radius: 0;
+      margin-right: 0;
+    }
+    /* .foot .nav-tabs>li.active>a,
     .foot .nav-tabs>li.active>a:focus,
     .foot .nav-tabs>li.active>a:hover{
       outline: none;
-      background: #8e87eb;
+      background: #0178ff;
+      color: #fff;
+    } */
+    .foot .nav-tabs>li.active>.a1,
+    .foot .nav-tabs>li.active>.a1:focus,
+    .foot .nav-tabs>li.active>.a1:hover{
+      outline: none;
+      background: #0178ff url('./images/pic4.png') no-repeat 10px center;
       color: #fff;
     }
-    .foot .nav-tabs li a{ text-align: center; }
-    .foot .tab-content{ margin-top: 20px; }
+    .foot .nav-tabs>li.active>.a2,
+    .foot .nav-tabs>li.active>.a2:focus,
+    .foot .nav-tabs>li.active>.a2:hover{
+      outline: none;
+      background: #0178ff url('./images/pic2.png') no-repeat  10px center;
+      color: #fff;
+    }
+    .foot .tab-content{
+      margin-top: 15px;
+      height: 300px;
+      overflow-y: auto;
+      background: #1a202e;
+    }
     .foot .tab-content .otems{
       height: 60px;
       line-height: 60px;
-      box-shadow: rgb(231, 231, 231) 0px 2px 2px;
-      margin-top: 13px;
-      margin-left: 13px;
-      background: rgb(255, 255, 255);
-      border-radius: 4px;
-       font-size: 18px;
+      margin: 6px 0;
+      font-size: 16px;
+      border-bottom: 1px solid #323848;
     }
-    .foot .tab-content .otems .pic img{ width: 22px; height: 22px; }
+    .foot .tab-content .otems .pic img{ width: 30px; height: 30px; }
     .foot .tab-content .otems .pic,
     .foot .tab-content .otems .txt1{
       float: left;
     }
     .foot .tab-content .otems .pic{ margin-left: 24px; }
-    .foot .tab-content .otems .txt1{ margin-left: 5px; }
-    .foot .tab-content .otems .txt2{ float: right; margin-right: 12px; }
+    .foot .tab-content #home .otems .txt1{
+      color: #747b8c;
+      margin-left: 20px;
+    }
+    .foot .tab-content #profile .otems .txt1{
+      color: #747b8c;
+      margin: 10px 0 10px 20px;
+      line-height: 0;
+    }
+    .foot .tab-content .otems .txt1 .txt1_1,
+    .foot .tab-content .otems .txt1 .txt1_2{height: 20px; line-height: 20px;}
+    .foot .tab-content .otems .txt1 .txt1_2 .span1,
+    .foot .tab-content .otems .txt1 .txt1_2 .span2{ margin-right: 10px;}
+    .foot .tab-content .otems .txt2{ float: right; margin-right: 12px; color: #fff; }
     .foot .tab-content>.active {
       display: block;
-      height: 200px;
+      width: 100%;
+/*       height: 300px;
       overflow-y: auto;
+      background: #1a202e; */
     }
-    .foot .noData{ text-align: center; margin: 15px auto; }
+    .foot .noData{ text-align: center; margin: 15px auto; color: #fff;}
     .paybox img{ width: 86px; height: 86px; }
     .weui-dialog__hd .weui-dialog__title{ display: none; }
     .paybox div{ margin-bottom: 15px; }
     #half .modal-content{ border-style: none; }
-    #half .toolbar .picker-button{text-decoration: none;}
+    #half .toolbar .picker-button{left: 0; text-decoration: none;}
+    #half .toolbar .toolbar-inner .guanbi{
+      position: absolute;
+      top: 5px;
+      left: 10px;
+      height: 34px;
+    }
+    #half #show-custom{background: #0178ff; outline: none;}
     #half #show-custom:hover{text-decoration: none; color: #fff;}
+     #half .cellWrap .cell1{text-align: center;}
+    #half .cellWrap .cell1 .p1 { text-align: center; font-size: 30px; margin-bottom: 0; }
     .payPan .weui-dialog__ft .a1:hover { text-decoration: none; color: #3cc51f; }
     .payPan .weui-dialog__ft .a2 { text-decoration: none; color: #5f646e; }
     #show-actions .open-popup{width: 60px; height: 60px; display: block;}
     .up .oText{overflow: hidden; white-space: nowrap; text-overflow: ellipsis; min-width: 210px;}
+    .weui-dialog.weui-dialog--visible{background: #363d4b;}
+    .weui-dialog.weui-dialog--visible .weui-dialog__bd{padding: 0;}
+    .weui-dialog.weui-dialog--visible .weui-dialog__bd .paybox .title{ color: #fff; font-size: 20px;}
+    .weui-dialog.weui-dialog--visible .weui-dialog__bd .paybox .content{
+      text-align: left;
+      padding: 0 20px;
+      margin: 20px 0;
+      color: #a3adc0;
+      font-size: 16px;
+      line-height: 30px;
+    }
+    .weui-dialog.weui-dialog--visible .weui-dialog__ft{line-height: 64px;}
+    .weui-dialog.weui-dialog--visible .weui-dialog__ft .a1{color: #a3adc0; background: none; outline: none;}
+    .weui-dialog.weui-dialog--visible .weui-dialog__ft .a2{color: #00cb6e; background: none; outline: none;}
     </style>
   </head>
   <body>
-   <div class="head">
+<!--    <div class="head">
     <div class="container">
       <div class="up row">
         <div class="avat col-xs-3 col-sm-3 col-md-3">
@@ -129,14 +204,12 @@
           </div>
         </div>
         <div class="txt col-xs-9 col-sm-9 col-md-9">
-          <!-- class="pay" onclick="open1()" -->
           <div class="oText"></div>
         </div>
       </div>
       <div class="down">
         <div class="row row_1">
            <div class="coin col-xs-6 col-sm-6 col-md-6 coin1">
-            <!-- // onclick="showUserMsg()" -->
             <img src="./images/yuetubiao.png" onclick="goback()">
               <span onclick="exitBtn()">账户余额</span>
            </div>
@@ -151,110 +224,103 @@
         </div>
       </div>
     </div>
-   </div>
-   <div class="foot">
+   </div> -->
+<div class="bgPic">
+  <div class="header">
+    <div class="container">
+      <div class="row row_top">
+        <div class="col-xs-4 col-sm-4 col-md-4">
+          <a href="login.html" class="links">
+            <img src="images/fanhui.png" class="ico1">
+          </a>
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 tip">
+          &nbsp;
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 div3">
+          <a href="user.html" class="links">
+            <img src="images/shezhi.png" class="ico2">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="wrapbox">
+    <div class="container">
+      <div class="wrapbox_1">
+        <span class="span1" onclick="exitBtn()">账户余额</span>
+        <a href="javascript:;" class="info" onclick="downShow();">充值</a>
+      </div>
+      <div class="wrapbox_2">
+        <div class="child1"><span class="spaMoney"></span>TCB</div>
+        <!--<div class="child2"><img src="images/linshi1.png" alt="avtar"></div>-->
+        <div class="child2 photo"><img class="ImgSrc" alt="avtar"></div>
+      </div>
+    </div>
+  </div>
+  <div class="foot">
     <div class="container">
       <!-- Nav tabs -->
       <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active lis li1"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">我的货币</a></li>
-        <li role="presentation" class="lis li2"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">我的道具</a></li>
+        <li role="presentation" class="active lis li1">
+          <a class="a1" href="#home" aria-controls="home" role="tab" data-toggle="tab">
+            <span class="span1"></span>
+            我的货币
+          </a>
+        </li>
+        <li role="presentation" class="lis li2">
+          <a class="a2" href="#profile" aria-controls="profile" role="tab" data-toggle="tab">
+            <span class="span2"></span>
+            我的道具
+          </a>
+        </li>
       </ul>
       <!-- Tab panes -->
       <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="home">
-           <div class="otems">
-             <div class="pic">
-               <img src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.0.1/xing.svg">
-             </div>
-             <div class="txt1">XWG</div>
-             <div class="txt2" onclick="pay('111')">0</div>
-           </div>
-           <div class="otems">
-             <div class="pic">
-               <img src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.0.1/xing.svg">
-             </div>
-             <div class="txt1">XWG</div>
-             <div class="txt2">0</div>
-           </div>
-           <div class="otems">
-             <div class="pic">
-               <img src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.0.1/xing.svg">
-             </div>
-             <div class="txt1">盛大游戏</div>
-             <div class="txt2">100</div>
-           </div>
-           <div class="otems">
-             <div class="pic">
-               <img src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.0.1/xing.svg">
-             </div>
-             <div class="txt1">腾讯手机游戏</div>
-             <div class="txt2">500</div>
-           </div>
-           <div class="noData">没有更多数据</div>
+          <div class="wrapper"></div>
         </div>
         <div role="tabpanel" class="tab-pane" id="profile">
-          <div class="otems">
-             <div class="pic">
-               <img src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.0.1/visa.svg">
-             </div>
-             <div class="txt1">XWGT</div>
-             <div class="txt2">0</div>
-           </div>
-           <div class="otems">
-             <div class="pic">
-               <img src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.0.1/visa.svg">
-             </div>
-             <div class="txt1">XWGT</div>
-             <div class="txt2">0</div>
-           </div>
-           <div class="otems">
-             <div class="pic">
-               <img src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.0.1/visa.svg">
-             </div>
-             <div class="txt1">网易公司</div>
-             <div class="txt2">220</div>
-           </div>
-           <div class="otems">
-             <div class="pic">
-               <img src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.0.1/visa.svg">
-             </div>
-             <div class="txt1">小米卡</div>
-             <div class="txt2">330</div>
-           </div>
-           <div class="noData">没有更多数据</div>
+          <div class="wrapper"></div>
         </div>
       </div>
 
     </div>
-   </div>
-
+  </div>
+</div>
    <div id="half" class="weui-popup__container popup-bottom">
       <div class="weui-popup__overlay"></div>
       <div class="weui-popup__modal">
         <div class="toolbar">
           <div class="toolbar-inner">
-            <a href="javascript:;" class="picker-button close-popup">关闭</a>
-            <p class="title">标题</p>
+            <a href="javascript:;" class="picker-button close-popup">
+              <img class="guanbi" src="./images/close.png" alt="关闭">
+            </a>
+            <p class="title">确认付款</p>
           </div>
         </div>
         <div class="modal-content">
-          <div class="weui-cells">
-            <div class="weui-cell">
+          <div class="weui-cells cellWrap">
+            <div class="weui-cell cell1">
               <div class="weui-cell__bd">
-                <p>￥100</p>
+                <!--<span class="span1">￥</span>-->
+                <div>
+                  <span class="p1"></span>
+                  <span class="p2"></span>
+                </div>
               </div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell cell2">
               <div class="weui-cell__bd">
-                <p>订单标题</p>
+                <p>订单信息</p>
               </div>
-              <div class="weui-cell__ft">说明文字</div>
+              <div class="weui-cell__ft orderInfo"></div>
             </div>
-            <div class="weui-cell">
+            <div class="weui-cell cell3">
               <div class="weui-cell__bd">
                 <p>订单描述</p>
               </div>
-              <div class="weui-cell__ft">说明文字</div>
+              <div class="weui-cell__ft orderDesc"></div>
             </div>
             <div class="weui-cell">
               <div class="weui-cell__bd">
@@ -303,68 +369,36 @@
     </div>
     <div class="hbbj"></div>
   </div>
-  <!--浮动层结束-->
-  <!-- <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-    <div class="modal-dialog modal-sm" role="document">
-      <div class="modal-content">
-        <div>
-          <div>555555555</div>
-          <div>66666666666</div>
-          <div>777777777</div>
-        </div>
-      </div>
-    </div>
-  </div> -->
 <script>
   $(document).on("click", "#show-custom", function() {
+    // 密钥对
+     KeyPair();
     var oDiv = '<div class="payPan">'+
       '<div class="paybox">'+
-        '<div>'+'<img src="./images/pay.png">'+'</div>'+
-        '<div>'+'你尚未设置支付密码'+'</div>'+
-        '<div>'+'支付前请先设置支付密码！'+'</div>'
+        '<div class="title">'+'你尚未设置支付密码'+'</div>'+
+        '<div class="content">'+'为保障您的资金安全，支付前请先设置支付密码！'+'</div>'
       '</div>'+
-      '<div>'+'设置支付密码'+'</div>'
     '</div>';
     $.modal({
-      title: "Hello",
       text: oDiv,
       buttons: [
+        { text: "取消", className: "a1"},
         {
-          text: "支付宝",
-          className: "a1",
+          text: "支设置",
+          className: "a2",
           onClick: function(){
             open1();
           }
         },
-        { text: "取消", className: "a2"},
       ],
     });
   });
-
-  // 读取用户信息
-  showUserMsg();
-  function showUserMsg() {
-    var userMsg = window.localStorage.getItem("objes");
-    var data1 = JSON.parse(userMsg)
-    console.log(data1);
-    $(".up .oText").text(data1.nickName);
-
-    if(data1.avatar == ""){
-      $(".photo .ImgSrc").attr('src', "./images/touxiang.png");
-    } else if(data1.avatar !== "") {
-      $(".photo .ImgSrc").attr('src', data1.avatar);
-    }
-
-  }
-  // 手动触发覆盖式的底部弹出层
-  downShow();
-  function downShow() {
-   $('#half').popup();
- }
-
-
+// 订单号
+// 666367350257221632
   </script>
   <script src="js/zhifu.js"></script>
   <script src="js/common.js"></script>
+  <script src="js/pages/home/index.js"></script>
+  <script src="js/base/security/transport.js"></script>
   </body>
 </html>
