--- a/node-test/weAPP/identity.html
+++ b/node-test/weAPP/identity.html
@@ -27,7 +27,7 @@
       .footer{position: relative; top: 50px;}
       .bottm .btn{
         width: 100%;
-        background: #8e87eb;
+        background: #121622;
         color: #fff;
         height: 46px;
         line-height: 46px;
@@ -37,12 +37,13 @@
     </style>
   </head>
   <body>
+  <div class="bgPic">  
     <div class="header">
       <div class="container">
         <div class="row row_top">
           <div class="col-xs-4 col-sm-4 col-md-4">
             <a href="myInfo.html" class="links">
-              <span class="glyphicon glyphicon-chevron-left"></span>
+              <img src="images/fanhui.png" class="ico1">
             </a>
           </div>
           <div class="col-xs-4 col-sm-4 col-md-4 tip">
@@ -141,6 +142,7 @@
       </div>
     </div>
     <div style="clear: both;"></div>
+  </div>
 <script type="text/javascript">
   $(function () {
     //比较简洁，细节可自行完善
