--- a/node-test/weAPP/sign.html
+++ b/node-test/weAPP/sign.html
@@ -7,71 +7,93 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>移动端</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
-    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
+    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询 -->
     <!--[if lt IE 9]>
-      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+      <script src="js/html5shiv.min.js"></script>
+      <script src="js/respond.min.js"></script>
     <![endif]-->
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边)-下放引入v3.4.1版本 -->
+    <!-- jQuery(Bootstrap 的所有JavaScript插件都依赖jQuery所以必须放在前边) -->
     <script src="js/jquery-1.12.4.min.js"></script>
-    <!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
-    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="js/bootstrap.min.js"></script>
     <style>
-      .header{ background: #8e87eb; position: fixed; z-index: 1; width: 100%; }
-      .header .row_top{ height: 44px; line-height: 44px; color: #fff; font-size: 16px; }
-      .header .row_top .tip{ text-align: center; }
-      .header .row_top .links{ color: #fff; text-decoration: none; }
-      .row1{
-        background: url('./images/di.png') no-repeat center center;
+      .bgImg{
+        position: absolute;
+        background: url('./images/bj.jpg') no-repeat center center;
         width: 100%;
-        height: 220px;
-        background-color: #fff;
+        height: 100%;
+        background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
+        -o-background-size: 100% 100%;
+      }
+      .row1{
+        width: 100%;
+        height: 140px;
+        line-height: 140px;
         background-size: 100% 100%;
         -webkit-background-size: 100% 100%;
         -o-background-size: 100% 100%;
         margin: 0 auto;
       }
       .row1_1{text-align: center;}
-      .row1_1 img{width: 275px; height: 76px; margin: 70px auto;}
-      .row2{position: relative;}
-      .addon1{padding: 0px 10px 0px 10px;}
-      .addon1 .btn1{ padding: 5px 12px; color: #8e87eb; background: transparent; border-color:#8e87eb;}
-      .row2 .form-inline .form-group{
-        margin-bottom: 0;
-        /* height: 50px;
-        line-height: 50px;
-        */
-        padding: 10px 0;
+      .row1_1 img{width: 127px; height: 57px;}
+      .row2{
+        position: relative;
+        margin-top: 0px;
       }
-      .row2 .form-inline{ border: 1px solid #ccc;  margin:8px auto; border-radius: 5px; }
-      .row2 .form-inline .form-group .input-group{ vertical-align: top; }
-      .row2 .form-inline .form-group .input-group-addon,
-      .row2 .form-inline .form-group .input-group .form-control{
+      .row2 .container{padding-right: 25px; padding-left: 25px;}
+      .row2 .form-group{
+        margin:5px 0;
+        border-bottom: 1px solid #fff;
+      }
+      .addon1{padding: 6px 0;}
+      .addon2{padding: 6px 0;}
+      .addon3{padding: 0px;}
+      .addon3 .btn1{
+        padding: 5px 0px;
+        color: #3dd4ff;
+        background: transparent;
+        border-style:none;
+      }
+      .row2 .form-group .input-group .cont1{ padding: 6px 20px; }
+      .row2 .form-group .input-group,
+      .row2 .form-group .input-group .form-control{
+        vertical-align: top;
+        height: 55px;
+        color: #fff;
+      }
+      .row2 .form-group .input-group-addon,
+      .row2 .form-group .input-group .form-control{
         border-style: none;
         background: transparent;
         outline: none;
         box-shadow: none;
       }
-      .row2 .form-inline .form-group .input-group-addon .glyphicon{ font-size: 20px; color:#8e87eb;  }
-      .checkTem{ text-align: center; font-size: 16px; margin: 10px 0; }
+      .row2 .form-group .input-group-addon .icon1{width: 20px; height: 25px;}
+      .row2 .form-group .input-group-addon .shanchu{width: 20px; height: 20px;}
+      .checkTem{
+        text-align: center;
+        font-size: 14px;
+        margin: 10px 0;
+        color: #fff;
+      }
+      .checkTem a{ color: #fff; }
       .loginBtn{margin-top: 10px;}
       .loginBtn .btn{
         width: 100%;
-        background:#8e87eb;
+        background:#0178ff;
         text-align: center;
         height: 50px;
         line-height: 50px;
         padding: 0;
         color: #fff;
+        border-style: none;
       }
       .passLink{ margin-top: 20px; }
       .passLink .item{text-align: center;}
       .passLink .item .a1{color:#8e87eb; text-decoration: underline;}
-      .checkbox label{height: 30px; line-height: 30px;}
+      .checkbox{height: 30px; line-height: 30px; margin: 20px 0;}
       .checkbox input[type=checkbox]{
-        margin-left: -30px;
+        margin-left: -50px;
       }
       .check-input {
         outline: 0;
@@ -81,119 +103,125 @@
         width: 22px;
         height: 22px;
         position: relative;
-        /* -webkit-appearance: none;
-        appearance: none; */
       }
       .img1 {
-        width: 26px;
-        height: 18px;
+        width: 20px;
+        height: 12px;
         position: relative;
         right: 0px;
         top: 0px;
       }
+      .row2 .txt{
+        text-align: center;
+        height: 30px;
+        line-height: 30px;
+        color: #fff;
+        margin-top: 30px;
+      }
+      @media screen and (min-width: 320px) and (max-width: 359px){
+        .row1{
+          width: 100%;
+          height: 100px;
+          line-height: 100px;
+          background-size: 100% 100%;
+          -webkit-background-size: 100% 100%;
+          -o-background-size: 100% 100%;
+          margin: 0 auto;
+        }
+        .checkbox input[type=checkbox] {margin-left: -25px;}
+        .row2 .form-group{margin:0px;}
+        .row2 .txt { margin-top: 10px;}
+      }
     </style>
   </head>
   <body>
-    <div class="header">
-      <div class="container">
-        <div class="row row_top">
-          <div class="col-xs-4 col-sm-4 col-md-4">
-            <a href="index.html" class="links">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
+    <div class="bgImg">
+      <div class="row1">
+        <div class="row1_1"><img src="images/logo.png" alt=""></div>
+      </div>
+      <div class="row2">
+        <div class="container">
+          <div class="wrap">
+            <div class="form-group">
+              <label class="sr-only" for="exampleInput">Amount</label>
+              <div class="input-group">
+                <div class="input-group-addon addon1">
+                  <img src="images/shouji.png" class="icon1">
+                </div>
+                <input type="text" class="form-control cont1" id="exampleInput" placeholder="请输入手机号">
+                <div class="input-group-addon addon2">
+                  <img class="shanchu" src="images/shanchu.png" onclick="inputClear()">
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-xs-4 col-sm-4 col-md-4 tip">
-            注册
+          <div class="wrap">
+            <div class="form-group">
+              <label class="sr-only" for="exampleInput2">Amount</label>
+              <div class="input-group">
+                <div class="input-group-addon addon1">
+                  <img src="images/nicheng.png" class="icon1">
+                </div>
+                <input type="text" class="form-control cont1" id="exampleInput2" placeholder="请输入昵称">
+                <div class="input-group-addon addon2">
+                  <img class="shanchu" src="images/shanchu.png" onclick="inputClear()">
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-xs-4 col-sm-4 col-md-4">&nbsp;</div>
+          <div class="wrap">
+            <div class="form-group">
+              <label class="sr-only" for="exampleInput1">Amount</label>
+              <div class="input-group">
+                <div class="input-group-addon addon1">
+                  <img src="images/yanzhengma.png" class="icon1">
+                </div>
+                <input type="text" class="form-control cont1" id="exampleInput1" placeholder="请输入验证码">
+                <div class="input-group-addon addon3">
+                 <button type="submit" class="btn btn1">点击获取</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="wrap">
+            <div class="form-group">
+              <label class="sr-only" for="example3">Amount</label>
+              <div class="input-group">
+                <div class="input-group-addon addon1">
+                  <img src="images/mima.png" class="icon1">
+                </div>
+                <input type="password" class="form-control cont1" id="example3" placeholder="请输入密码">
+                <div class="input-group-addon addon2">
+                  <img id="picShow" class="img1" onclick="ShowPass()" src="images/yan1.png">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="wrap">
+            <div class="form-group">
+              <label class="sr-only" for="example4">Amount</label>
+              <div class="input-group">
+                <div class="input-group-addon addon1">
+                  <img src="images/mima.png" class="icon1">
+                </div>
+                <input type="password" class="form-control cont1" id="example4" placeholder="请再次输入密码">
+                <div class="input-group-addon addon2">
+                  <img id="imgShow" class="img1" onclick="ShowPass1()" src="images/yan1.png">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="checkbox checkTem">
+            <div class="tem1">
+              <input type="checkbox" class="check-input">
+              我已阅读并同意 <a href="###">《用户注册协议》</a>
+            </div>
+          </div>
+          <div class="loginBtn"><button type="button" class="btn btn-default">注册</button></div>
+          <div class="txt">已有账号，<a href="login.html">去登录</a></div>
         </div>
       </div>
     </div>
-    <div class="row1">
-      <div class="row1_1"><img src="images/logo.png" alt=""></div>
-    </div>
-    <div class="row2">
-      <div class="container">
-       <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="exampleInput">Amount</label>
-          <div class="input-group">
-            <div class="input-group-addon">
-              <i class="glyphicon glyphicon-phone"></i>
-            </div>
-            <input type="text" class="form-control" id="exampleInput" placeholder="输入手机号">
-            <div class="input-group-addon">
-              <i class="glyphicon glyphicon-remove-circle" onclick="inputClear()"></i>
-            </div>
-          </div>
-        </div>
-      </form>
-      <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="exampleInput1">Amount</label>
-          <div class="input-group">
-            <div class="input-group-addon">
-              <i class="glyphicon glyphicon-qrcode"></i>
-            </div>
-            <input type="text" class="form-control" id="exampleInput1" placeholder="输入验证码">
-            <div class="input-group-addon addon1">
-             <button type="submit" class="btn btn1">点击获取</button>
-            </div>
-          </div>
-        </div>
-      </form>
-      <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="exampleInput2">Amount</label>
-          <div class="input-group">
-            <div class="input-group-addon">
-              <i class="glyphicon glyphicon-user"></i>
-            </div>
-            <input type="text" class="form-control" id="exampleInput2" placeholder="请输入昵称">
-            <div class="input-group-addon">
-              <i class="glyphicon glyphicon-remove-circle" onclick="inputClear()"></i>
-            </div>
-          </div>
-        </div>
-      </form>
-      <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="example3">Amount</label>
-          <div class="input-group">
-            <div class="input-group-addon">
-              <i class="glyphicon glyphicon-lock"></i>
-            </div>
-            <input type="password" class="form-control" id="example3" placeholder="请输入密码">
-            <div class="input-group-addon">
-              <!-- <i class="glyphicon glyphicon-remove-circle" onclick="ShowPass()"></i> -->
-              <img id="picShow" class="img1" onclick="ShowPass()" src="look1.png">
-            </div>
-          </div>
-        </div>
-      </form>
-      <form class="form-inline">
-        <div class="form-group">
-          <label class="sr-only" for="example4">Amount</label>
-          <div class="input-group">
-            <div class="input-group-addon">
-              <i class="glyphicon glyphicon-lock"></i>
-            </div>
-            <input type="password" class="form-control" id="example4" placeholder="请再次输入密码">
-            <div class="input-group-addon">
-              <!-- <i class="glyphicon glyphicon-remove-circle" onclick="ShowPass1()"></i> -->
-              <img id="imgShow" class="img1" onclick="ShowPass1()" src="look1.png">
-            </div>
-          </div>
-        </div>
-      </form>
-      <div class="checkbox checkTem">
-        <label>
-          <input type="checkbox" class="check-input">我已阅读并同意 <a href="###">《用户注册协议》</a>
-        </label>
-      </div>
-      <div class="loginBtn"><button type="button" class="btn btn-default">注册</button></div>
-    </div>
-  </div>
     <script>
       function inputClear() {
         $("#exampleInput").val("");
@@ -201,28 +229,24 @@
       }
        var imgShow = document.getElementById("imgShow");
        var Example4 = document.getElementById("example4");
-       // var imgShow = $("#imgShow");
-       // var Example4 = $("#example4");
       function ShowPass1(){
         if (Example4.type == "password") {
           Example4.type = "text";
-          imgShow.src = "look2.png";
+          imgShow.src = "images/yan2.png";
         }else {
           Example4.type = "password";
-          imgShow.src = "look1.png";
+          imgShow.src = "images/yan1.png";
         }
       }
        var picShow = document.getElementById("picShow");
        var Example3 = document.getElementById("example3");
-       // var imgShow = $("#imgShow");
-       // var Example4 = $("#example4");
       function ShowPass(){
         if (Example3.type == "password") {
           Example3.type = "text";
-          picShow.src = "look2.png";
+          picShow.src = "images/yan2.png";
         }else {
           Example3.type = "password";
-          picShow.src = "look1.png";
+          picShow.src = "images/yan1.png";
         }
       }
   </script>
