--- a/node-test/weAPP/myInfo.html
+++ b/node-test/weAPP/myInfo.html
@@ -9,32 +9,72 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/cropper.min.css" rel="stylesheet">
     <link href="css/sitelogo.css" rel="stylesheet">
+    <!--<link rel="stylesheet" type="text/css" href="css/font-awesome.4.6.0.css">-->
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">
     <!--[if lt IE 9]>
-      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+      <script src="js/html5shiv.min.js"></script>
+      <script src="js/respond.min.js"></script>
     <![endif]-->
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边)-下放引入v3.4.1版本 -->
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/cropper.js"></script>
     <script src="js/sitelogo.js"></script>
+    <script src="js/base/event/eventdispatcher.js"></script>
+    <script src="js/base/bridge/bridge.js"></script>
     <style>
-     .header{ background: #8e87eb; }
-     .header .row_top{ height: 44px; line-height: 44px; color: #fff; font-size: 16px; }
+    .bgPic{
+        position: absolute;
+        background: url('./images/bj2.jpg') no-repeat center center;
+        width: 100%;
+        height: 100%;
+        background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
+        -o-background-size: 100% 100%;
+      }
+     .header{ background: transparent; }
+     .header .row_top{ height: 48px; line-height: 48px; color: #fff; font-size: 16px; }
+     .header .row_top .ico1{ width: 30px; height: 28px; }
      .header .row_top .tip{ text-align: center; font-weight: 700;}
      .header .row_top .links{ color: #fff; text-decoration: none; }
      .content-info .list-group-item{
-        padding: 20px 15px;
+        padding: 22px 15px;
         border-style: none;
-        margin-bottom: 5px;
-        border-bottom: 1px solid #ebebeb;
+        margin-bottom: 15px;
      }
-     .content-info .item1{ padding: 20px 15px;}
-     .content-info .item4 .wrap4{ height: 20px; line-height: 20px; }
-     .content-info .item4 .wrap4 .renzhen{ margin: 0 5px; }
-     .content-info .list-group-item .use{ float: right; color: #a5a4a7; }
-     .content-info .list-group-item .use1 .imgSrc{
+     .content{ width: 100%; height: 130px; background-size: 100% 100%; }
+     .content .avatar{ width: 80%; height: 130px; margin: 0px auto;}
+     .content .avatar .avatar_1,
+     .content .avatar .avatar_2{ text-align: center; }
+     .content .avatar .avatar_2 p{
+       font-size: 16px;
+       height: 28px;
+       line-height: 28px;
+       font-weight: bold;
+       color: #fff;
+       margin: 15px 0;
+     }
+     .content .avatar .avatar_1 img{ width: 72px; height: 72px; border-radius: 50%; }
+
+     .content-info .item1{ padding: 20px 15px; background: transparent;}
+     .content-info .itemAll{background: #1a202e; color: #fff;}
+     .content-info .itemAll .pic1{ width: 23px; height: 26px; margin-right: 15px;}
+     .content-info .itemAll .wrap4{ height: 26px; line-height: 26px; display: inline-block; width: 100%; }
+     .content-info .itemAll .go{
+       width: 8px;
+       height: 14px;
+      }
+     .content-info .item4 .wrap4 .renzhen{
+       margin: 0 5px;
+       color: #ff513f;
+       border: 1px solid #ff513f;
+       padding: 2px 8px;
+       background: none;
+       outline: none;
+      }
+     .content-info .item2 .wrap4 .userinfo{ margin: 0 5px; }
+     .content-info .list-group-item .use{ float: right; }
+     .content-info .list-group-item .use1 .ImgSrc{
       width: 60px;
       height: 60px;
       border-radius: 50%;
@@ -43,11 +83,9 @@
      .content-info .list-group-item .a_wrap{
         display: block;
         text-decoration: none;
-        color: #000;
+        color: #fff;
       }
       .content-info .list-group-item .wrap1{
-        height: 60px;
-        line-height: 60px;
         outline: none;
         text-decoration: none;
       }
@@ -60,55 +98,80 @@
       .conts  .items .btn{padding: 6px 10px;}
       #avatar-modal-label{ text-align: center; }
       .modal1{ margin: 25px auto; }
-      /* #avatar-modal .modal-dialog{ height: 100%; }
-      #avatar-modal .modal-content{ height: 100%; } */
     </style>
   </head>
   <body>
-    <div class="header">
-       <div class="container">
-          <div class="row row_top">
-            <div class="col-xs-4 col-sm-4 col-md-4">
-              <a href="user.html" class="links">
-                <span class="glyphicon glyphicon-chevron-left"></span>
+    <div class="bgPic">
+      <div class="header">
+        <div class="container">
+            <div class="row row_top">
+              <div class="col-xs-4 col-sm-4 col-md-4">
+                <a href="user.html" class="links">
+                 <img src="images/fanhui.png" class="ico1">
+                </a>
+              </div>
+              <div class="col-xs-4 col-sm-4 col-md-4 tip">
+                我的资料
+              </div>
+              <div class="col-xs-4 col-sm-4 col-md-4">&nbsp;</div>
+            </div>
+        </div>
+      </div>
+      <div class="content-info">
+        <div class="container">
+          <ul class="list-group">
+            <li class="list-group-item item1">
+              <a href="####" class="a_wrap wrap1" data-toggle="modal" data-target="#avatar-modal">
+                <div class="content">
+                    <div class="avatar">
+                      <div class="avatar_1 photo">
+                        <!--<img src="images/linshi1.png" class="imgSrc">-->
+                        <img class="ImgSrc">
+                      </div>
+                      <div class="avatar_2 up">
+                        <!--<p class="oText">sms_2960951691355635</p>-->
+                        <p class="oText"></p>
+                      </div>
+                    </div>
+                </div>
               </a>
-            </div>
-            <div class="col-xs-4 col-sm-4 col-md-4 tip">
-              我的资料
-            </div>
-            <div class="col-xs-4 col-sm-4 col-md-4">&nbsp;</div>
-          </div>
-       </div>
-    </div>
-    <div class="content-info">
-      <ul class="list-group">
-        <li class="list-group-item item1">
-          <a href="####" class="a_wrap wrap1" data-toggle="modal" data-target="#avatar-modal">
-            <div class="oDiv">头像</div>
-            <div class="use use1">
-               <img src="images/touxiang.png" class="imgSrc">
-               <span class="glyphicon glyphicon-chevron-right"></span>
-            </div>
-          </a>
-        </li>
-        <li class="list-group-item">
-          用户名
-          <span class="use use2">sms_2960951691355635</span>
-        </li>
-        <li class="list-group-item">
-          手机
-          <span class="use use3">17620158904</span>
-        </li>
-        <li class="list-group-item item4">
-          <a href="identity.html" class="a_wrap wrap4">
-            <div class="oDiv">实名认证</div>
-            <div class="use use4">
-              <span class="renzhen">未认证</span>
-              <span class="glyphicon glyphicon-chevron-right"></span>
-            </div>
-          </a>
-        </li>
-      </ul>
+            </li>
+            <li class="list-group-item item2 itemAll">
+              <div class="a_wrap wrap4">
+                <div class="oDiv">
+                  <img src="images/yonghumin.png" class="pic1">
+                  <span class="spa1">用户名</span>
+                </div>
+                <div class="use use4">
+                  <!--<span class="userinfo">sms_2960951691355635</span>-->
+                  <span class="userinfo"></span>
+                  <img src="images/go.png" class="go">
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item itemAll">
+              <div class="wrap4">
+                <img src="images/shoujihao.png" class="pic1">
+                <span>手机</span>
+                <!--<span class="use use3 phone">17620158904</span>-->
+                <span class="use use3 phone"></span>
+              </div>
+            </li>
+            <li class="list-group-item item4 itemAll">
+              <a href="identity.html" class="a_wrap wrap4">
+                <div class="oDiv">
+                  <img src="images/shiming.png" class="pic1">
+                  <span>实名认证</span>
+                </div>
+                <div class="use use4">
+                  <button class="btn renzhen">未认证</button>
+                  <img src="images/go.png" class="go">
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
     <!-- +++++++++++++++模态框区域++++++++++++++++ -->
     <div class="modal fade modal1" id="avatar-modal" aria-hidden="true" aria-labelledby="avatar-modal-label" role="dialog" tabindex="-1">
@@ -224,5 +287,7 @@
       });
     }
     </script>
+   <script src="js/common.js"></script>
+   <script src="js/pages/myInfo/index.js"></script>
   </body>
 </html>
