--- a/node-test/weAPP/security.html
+++ b/node-test/weAPP/security.html
@@ -8,6 +8,8 @@
     <title>移动端</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/pwdInput.css"> -->
+    <link rel="stylesheet" href="css/weui.min.css">
+    <link rel="stylesheet" href="css/jquery-weui.min.css">
     <link rel="stylesheet" type="text/css" href="css/zhifu.css">
     <!--[if lt IE 9]>
       <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
@@ -15,66 +17,101 @@
     <![endif]-->
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边)-下放引入v3.4.1版本 -->
     <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/jquery-weui.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <style>
-      .header{ background: #8e87eb; }
-      .header .row_top{ height: 44px; line-height: 44px; color: #fff; font-size: 16px; }
+      .bgPic{
+        position: absolute;
+        background: url('./images/bj2.jpg') no-repeat center center;
+        width: 100%;
+        height: 100%;
+        background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
+        -o-background-size: 100% 100%;
+      }
+      .header{ background: transparent; border-bottom: 1px solid #2e323e; }
+      .header .row_top{ height: 48px; line-height: 48px; color: #fff; font-size: 16px; }
+      .header .row_top .ico1{ width: 30px; height: 28px; }
       .header .row_top .tip{ text-align: center; font-weight: 700; }
       .header .row_top .links{ color: #fff; text-decoration: none; }
+      .content-info{ margin-top:10px;}
       .content-info .list-group-item{
         padding: 20px 15px;
         border-style: none;
-        margin-bottom: 5px;
-        border-bottom: 1px solid #ebebeb;
+        margin-bottom: 10px;
+        background: #1a202e;
       }
-      .content-info .item4 .wrap4{ height: 20px; line-height: 20px; }
-      .content-info .item4 .wrap4 .renzhen{ margin: 0 5px; }
+      .content-info .item4 .wrap4{ height: 26px; line-height: 26px; }
+      .content-info .item4 .wrap4 .renzhen{ margin: 0 5px; color: #ff513f; }
       .content-info .list-group-item .use{ float: right; color: #a5a4a7; }
       .content-info .list-group-item .a_wrap{
         display: block;
         text-decoration: none;
-        color: #000;
+        color: #747b8c;
+        font-weight: bold;
       }
       .content-info .list-group-item .a_wrap .oDiv{ float: left; }
+      .content-info .list-group-item .a_wrap .oDiv .pic1{ width: 23px; height: 26px; margin-right: 15px;}
+      .content-info .list-group-item .a_wrap .use4 .go{width: 8px; height: 14px;}
+      .weui-dialog.weui-dialog--visible .weui-dialog__hd .weui-dialog__title {display: none;}
+      .weui-dialog.weui-dialog--visible{background: #363d4b;}
+      .weui-dialog.weui-dialog--visible .weui-dialog__bd{padding: 0;}
+      .weui-dialog.weui-dialog--visible .weui-dialog__bd .paybox .title{ color: #fff; font-size: 20px;}
+      .weui-dialog.weui-dialog--visible .weui-dialog__bd .paybox .content{
+        text-align: left;
+        padding: 0 20px;
+        margin: 20px 0;
+        color: #a3adc0;
+        font-size: 16px;
+        line-height: 30px;
+      }
+      .weui-dialog.weui-dialog--visible .weui-dialog__ft{line-height: 64px;}
+      .weui-dialog.weui-dialog--visible .weui-dialog__ft .a1{color: #a3adc0; background: none; outline: none;}
+      .weui-dialog.weui-dialog--visible .weui-dialog__ft .a2{color: #00cb6e; background: none; outline: none;}
     </style>
   </head>
   <body>
-  <div class="header">
-    <div class="container">
-      <div class="row row_top">
-        <div class="col-xs-4 col-sm-4 col-md-4">
-          <a href="user.html" class="links">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-          </a>
+  <div class="bgPic">
+    <div class="header">
+      <div class="container">
+        <div class="row row_top">
+          <div class="col-xs-4 col-sm-4 col-md-4">
+            <a href="user.html" class="links">
+              <img src="images/fanhui.png" class="ico1">
+            </a>
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 tip">
+          账户安全
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4">&nbsp;</div>
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 tip">
-         账户安全
-        </div>
-        <div class="col-xs-4 col-sm-4 col-md-4">&nbsp;</div>
       </div>
     </div>
-  </div>
-  <div class="content-info">
-    <ul class="list-group">
-      <li class="list-group-item item4">
-        <a href="editpassword.html" class="a_wrap wrap4">
-          <div class="oDiv">账户密码</div>
-          <div class="use use4">
-            <!-- <span class="renzhen">未认证</span> -->
-            <span class="glyphicon glyphicon-chevron-right"></span>
-          </div>
-        </a>
-      </li>
-      <li class="list-group-item item4">
-        <a href="####" class="a_wrap wrap4" onclick="open1()">
-          <div class="oDiv">支付密码</div>
-          <div class="use use4">
-            <span class="renzhen">未设置</span>
-            <span class="glyphicon glyphicon-chevron-right"></span>
-          </div>
-        </a>
-      </li>
-    </ul>
+    <div class="content-info">
+       <div class="container">
+        <ul class="list-group">
+          <li class="list-group-item item4">
+            <a href="editpassword.html" class="a_wrap wrap4">
+              <div class="oDiv"><img src="images/zhanghumima.png" class="pic1">账户密码</div>
+              <div class="use use4">
+                <!-- <span class="renzhen">未认证</span> -->
+                <img src="images/go.png" class="go">
+              </div>
+            </a>
+          </li>
+          <li class="list-group-item item4">
+            <!--onclick="open1()"-->
+            <a href="javascript:;" class="a_wrap wrap4" id="show-custom">
+              <div class="oDiv"><img src="images/zhifumima.png" class="pic1">支付密码</div>
+              <div class="use use4">
+                <span class="renzhen">未设置</span>
+                <img src="images/go.png" class="go">
+              </div>
+            </a>
+          </li>
+        </ul>
+       </div>
+    </div>
   </div>
   <!--浮动层-->
   <div class="ftc_wzsf">
@@ -114,5 +151,28 @@
   </div>
   <!--浮动层结束-->
   <script src="js/zhifu.js"></script>
+  <script>
+    $(document).on("click", "#show-custom", function() {
+    var oDiv = '<div class="payPan">'+
+      '<div class="paybox">'+
+        '<div class="title">'+'你尚未设置支付密码'+'</div>'+
+        '<div class="content">'+'为保障您的资金安全，支付前请先设置支付密码！'+'</div>'
+      '</div>'+
+    '</div>';
+    $.modal({
+      text: oDiv,
+      buttons: [
+        { text: "取消", className: "a1"},
+        {
+          text: "去设置",
+          className: "a2",
+          onClick: function(){
+            open1();
+          }
+        },
+      ],
+    });
+  });
+  </script>
   </body>
 </html>
